exports[`BarChart [common] example testing should match snapshot for 01.basic 1`] = `
<div>
  <BarChart
    data={
      Array [
        Object {
          "x": "2015-01-01",
          "y": 1,
        },
        Object {
          "x": "2015-01-02",
          "y": 2,
        },
        Object {
          "x": "2015-01-03",
          "y": 3,
        },
        Object {
          "x": "2015-01-04",
          "y": 5,
        },
      ]
    }
    hasLegend={false}
    hasToolTips={true}
    height={400}
    margin={
      Object {
        "bottom": 50,
        "left": 80,
        "right": 20,
        "top": 10,
      }
    }
    palette={
      Array [
        "color-chart-0",
        "color-chart-1",
        "color-chart-2",
        "color-chart-3",
        "color-chart-4",
        "color-chart-5",
      ]
    }
    width={1000}
    xAxisField="x"
    xAxisFormatter={[Function]}
    xAxisTickCount={null}
    xAxisTitle={null}
    xAxisTitleColor="#000"
    yAxisFields={
      Array [
        "y",
      ]
    }
    yAxisIsStacked={false}
    yAxisMin={0}
    yAxisTickCount={null}
    yAxisTitle="Revenue"
    yAxisTitleColor="#000"
    yAxisTooltipFormatter={[Function]} />
</div>
`;

exports[`BarChart [common] example testing should match snapshot for 02.basic-responsive 1`] = `
<div>
  <Resizer />
</div>
`;

exports[`BarChart [common] example testing should match snapshot for 03.grouped 1`] = `
<div>
  <BarChart
    data={
      Array [
        Object {
          "apples": 10,
          "bananas": 15,
          "oranges": 5,
          "peaches": 35,
          "pears": 20,
          "x": "Monday",
        },
        Object {
          "apples": 20,
          "bananas": 25,
          "oranges": 27,
          "peaches": 20,
          "pears": 5,
          "x": "Tuesday",
        },
        Object {
          "apples": 5,
          "bananas": 20,
          "oranges": 35,
          "peaches": 5,
          "pears": 15,
          "x": "Wednesday",
        },
      ]
    }
    hasLegend={false}
    hasToolTips={true}
    height={400}
    margin={
      Object {
        "bottom": 50,
        "left": 80,
        "right": 20,
        "top": 10,
      }
    }
    palette={
      Array [
        "color-chart-0-lightest",
        "color-chart-0-light",
        "color-chart-0",
        "color-chart-0-dark",
        "color-chart-0-darkest",
        "color-chart-1-lightest",
        "color-chart-1-light",
        "color-chart-1",
        "color-chart-1-dark",
        "color-chart-1-darkest",
        "color-chart-2-lightest",
        "color-chart-2-light",
        "color-chart-2",
        "color-chart-2-dark",
        "color-chart-2-darkest",
        "color-chart-3-lightest",
        "color-chart-3-light",
        "color-chart-3",
        "color-chart-3-dark",
        "color-chart-3-darkest",
        "color-chart-4-lightest",
        "color-chart-4-light",
        "color-chart-4",
        "color-chart-4-dark",
        "color-chart-4-darkest",
        "color-chart-5-lightest",
        "color-chart-5-light",
        "color-chart-5",
        "color-chart-5-dark",
        "color-chart-5-darkest",
      ]
    }
    width={1000}
    xAxisField="x"
    xAxisFormatter={[Function]}
    xAxisTickCount={null}
    xAxisTitle={null}
    xAxisTitleColor="#000"
    yAxisFields={
      Array [
        "apples",
        "pears",
        "peaches",
        "bananas",
        "oranges",
      ]
    }
    yAxisIsStacked={false}
    yAxisMin={0}
    yAxisTickCount={null}
    yAxisTitle="Fruit Count"
    yAxisTitleColor="#000"
    yAxisTooltipFormatter={[Function]} />
</div>
`;

exports[`BarChart [common] example testing should match snapshot for 04.grouped-with-legend 1`] = `
<div>
  <BarChart
    data={
      Array [
        Object {
          "apples": 10,
          "bananas": 15,
          "oranges": 5,
          "peaches": 35,
          "pears": 20,
          "x": "Monday",
        },
        Object {
          "apples": 20,
          "bananas": 25,
          "oranges": 27,
          "peaches": 20,
          "pears": 5,
          "x": "Tuesday",
        },
        Object {
          "apples": 5,
          "bananas": 20,
          "oranges": 35,
          "peaches": 5,
          "pears": 15,
          "x": "Wednesday",
        },
      ]
    }
    hasLegend={false}
    hasToolTips={true}
    height={400}
    margin={
      Object {
        "bottom": 50,
        "left": 80,
        "right": 20,
        "top": 10,
      }
    }
    palette={
      Array [
        "color-chart-0",
        "color-chart-1",
        "color-chart-2",
        "color-chart-3",
        "color-chart-4",
        "color-chart-5",
      ]
    }
    width={1000}
    xAxisField="x"
    xAxisFormatter={[Function]}
    xAxisTickCount={null}
    xAxisTitle={null}
    xAxisTitleColor="#000"
    yAxisFields={
      Array [
        "apples",
        "pears",
        "peaches",
        "bananas",
        "oranges",
      ]
    }
    yAxisIsStacked={false}
    yAxisMin={0}
    yAxisTickCount={null}
    yAxisTitle="Fruit Count"
    yAxisTitleColor="#000"
    yAxisTooltipFormatter={[Function]} />
  <Legend
    hasBorders={true}
    isReversed={false}
    orient="vertical"
    style={
      Object {
        "verticalAlign": "top",
      }
    }>
    <Legend.Item
      color="color-chart-0"
      hasPoint={true}>
      apples
    </Legend.Item>
    <Legend.Item
      color="color-chart-1"
      hasPoint={true}>
      pears
    </Legend.Item>
    <Legend.Item
      color="color-chart-2"
      hasPoint={true}>
      peaches
    </Legend.Item>
    <Legend.Item
      color="color-chart-3"
      hasPoint={true}>
      bananas
    </Legend.Item>
    <Legend.Item
      color="color-chart-4"
      hasPoint={true}>
      oranges
    </Legend.Item>
  </Legend>
</div>
`;

exports[`BarChart [common] example testing should match snapshot for 05.limited-ticks 1`] = `
<div>
  <BarChart
    data={
      Array [
        Object {
          "x": "2015-01-01",
          "y": 1,
        },
        Object {
          "x": "2015-01-02",
          "y": 2,
        },
        Object {
          "x": "2015-01-03",
          "y": 3,
        },
        Object {
          "x": "2015-01-04",
          "y": 5,
        },
        Object {
          "x": "2015-01-05",
          "y": 2,
        },
        Object {
          "x": "2015-01-06",
          "y": 3,
        },
        Object {
          "x": "2015-01-07",
          "y": 2,
        },
        Object {
          "x": "2015-01-08",
          "y": 2,
        },
        Object {
          "x": "2015-01-09",
          "y": 5,
        },
        Object {
          "x": "2015-01-10",
          "y": 3,
        },
        Object {
          "x": "2015-01-11",
          "y": 4,
        },
        Object {
          "x": "2015-01-12",
          "y": 4,
        },
        Object {
          "x": "2015-01-13",
          "y": 5,
        },
        Object {
          "x": "2015-01-14",
          "y": 3,
        },
        Object {
          "x": "2015-01-15",
          "y": 4,
        },
        Object {
          "x": "2015-01-16",
          "y": 3,
        },
        Object {
          "x": "2015-01-17",
          "y": 6,
        },
      ]
    }
    hasLegend={false}
    hasToolTips={true}
    height={400}
    margin={
      Object {
        "bottom": 50,
        "left": 80,
        "right": 20,
        "top": 10,
      }
    }
    palette={
      Array [
        "color-chart-0",
        "color-chart-1",
        "color-chart-2",
        "color-chart-3",
        "color-chart-4",
        "color-chart-5",
      ]
    }
    width={1000}
    xAxisField="x"
    xAxisFormatter={[Function]}
    xAxisTickCount={5}
    xAxisTitle={null}
    xAxisTitleColor="#000"
    yAxisFields={
      Array [
        "y",
      ]
    }
    yAxisIsStacked={false}
    yAxisMin={0}
    yAxisTickCount={4}
    yAxisTitle={null}
    yAxisTitleColor="#000"
    yAxisTooltipFormatter={[Function]} />
</div>
`;

exports[`BarChart [common] example testing should match snapshot for 06.all-the-things 1`] = `
<BarChart
  colorMap={
    Object {
      "apples": "color-chart-good",
      "oranges": "color-chart-1",
    }
  }
  data={
    Array [
      Object {
        "apples": 2000,
        "day": "monday",
        "oranges": 3000,
      },
      Object {
        "apples": 2000,
        "day": "tuesday",
        "oranges": 5000,
      },
      Object {
        "apples": 3000,
        "day": "wednesday",
        "oranges": 2000,
      },
      Object {
        "apples": 5000,
        "day": "thursday",
        "oranges": 6000,
      },
    ]
  }
  hasLegend={false}
  hasToolTips={true}
  height={400}
  margin={
    Object {
      "bottom": 50,
      "left": 80,
      "right": 20,
      "top": 10,
    }
  }
  palette={
    Array [
      "color-chart-0",
      "color-chart-1",
      "color-chart-2",
      "color-chart-3",
      "color-chart-4",
      "color-chart-5",
    ]
  }
  width={1000}
  xAxisField="day"
  xAxisFormatter={[Function]}
  xAxisTickCount={2}
  xAxisTitle="Weekdays"
  xAxisTitleColor="#000"
  yAxisFields={
    Array [
      "apples",
      "oranges",
    ]
  }
  yAxisFormatter={[Function]}
  yAxisIsStacked={false}
  yAxisMin={0}
  yAxisTickCount={4}
  yAxisTitle="Fruit Count"
  yAxisTitleColor="#000"
  yAxisTooltipFormatter={[Function]} />
`;

exports[`BarChart [common] example testing should match snapshot for 07.stacked 1`] = `
<div>
  <BarChart
    data={
      Array [
        Object {
          "apples": 10,
          "peaches": 35,
          "pears": 20,
          "x": "Monday",
        },
        Object {
          "apples": 20,
          "peaches": 20,
          "pears": 5,
          "x": "Tuesday",
        },
        Object {
          "apples": 5,
          "peaches": 5,
          "pears": 15,
          "x": "Wednesday",
        },
      ]
    }
    hasLegend={false}
    hasToolTips={true}
    height={400}
    margin={
      Object {
        "bottom": 50,
        "left": 80,
        "right": 20,
        "top": 10,
      }
    }
    palette={
      Array [
        "color-chart-0",
        "color-chart-1",
        "color-chart-2",
        "color-chart-3",
        "color-chart-4",
        "color-chart-5",
      ]
    }
    width={1000}
    xAxisField="x"
    xAxisFormatter={[Function]}
    xAxisTickCount={null}
    xAxisTitle={null}
    xAxisTitleColor="#000"
    yAxisFields={
      Array [
        "apples",
        "pears",
        "peaches",
      ]
    }
    yAxisIsStacked={true}
    yAxisMin={0}
    yAxisTickCount={null}
    yAxisTitle="Fruit Count"
    yAxisTitleColor="#000"
    yAxisTooltipFormatter={[Function]} />
</div>
`;

exports[`BarChart [common] example testing should match snapshot for 08.unformatted-tooltips 1`] = `
<div>
  <BarChart
    data={
      Array [
        Object {
          "x": "2015-01-01",
          "y": 1200,
        },
        Object {
          "x": "2015-01-02",
          "y": 900,
        },
        Object {
          "x": "2015-01-03",
          "y": 1800,
        },
        Object {
          "x": "2015-01-04",
          "y": 3000,
        },
      ]
    }
    hasLegend={false}
    hasToolTips={true}
    height={400}
    margin={
      Object {
        "bottom": 50,
        "left": 80,
        "right": 20,
        "top": 10,
      }
    }
    palette={
      Array [
        "color-chart-0",
        "color-chart-1",
        "color-chart-2",
        "color-chart-3",
        "color-chart-4",
        "color-chart-5",
      ]
    }
    width={1000}
    xAxisField="x"
    xAxisFormatter={[Function]}
    xAxisTickCount={null}
    xAxisTitle={null}
    xAxisTitleColor="#000"
    yAxisFields={
      Array [
        "y",
      ]
    }
    yAxisIsStacked={false}
    yAxisMin={0}
    yAxisTickCount={null}
    yAxisTitle="Revenue"
    yAxisTitleColor="#000"
    yAxisTooltipFormatter={[Function]} />
</div>
`;

exports[`BarChart [common] example testing should match snapshot for 09.formatted-tooltips 1`] = `
<div>
  <BarChart
    data={
      Array [
        Object {
          "x": "2015-01-01",
          "y": 1200,
        },
        Object {
          "x": "2015-01-02",
          "y": 900,
        },
        Object {
          "x": "2015-01-03",
          "y": 1800,
        },
        Object {
          "x": "2015-01-04",
          "y": 3000,
        },
      ]
    }
    hasLegend={false}
    hasToolTips={true}
    height={400}
    margin={
      Object {
        "bottom": 50,
        "left": 80,
        "right": 20,
        "top": 10,
      }
    }
    palette={
      Array [
        "color-chart-0",
        "color-chart-1",
        "color-chart-2",
        "color-chart-3",
        "color-chart-4",
        "color-chart-5",
      ]
    }
    width={1000}
    xAxisField="x"
    xAxisFormatter={[Function]}
    xAxisTickCount={null}
    xAxisTitle={null}
    xAxisTitleColor="#000"
    yAxisFields={
      Array [
        "y",
      ]
    }
    yAxisIsStacked={false}
    yAxisMin={0}
    yAxisTickCount={null}
    yAxisTitle="Revenue"
    yAxisTitleColor="#000"
    yAxisTooltipDataFormatter={[Function]}
    yAxisTooltipFormatter={[Function]} />
</div>
`;

exports[`BarChart [common] example testing should match snapshot for 10.empty 1`] = `
<BarChart
  data={Array []}
  hasLegend={false}
  hasToolTips={true}
  height={400}
  margin={
    Object {
      "bottom": 50,
      "left": 80,
      "right": 20,
      "top": 10,
    }
  }
  palette={
    Array [
      "color-chart-0",
      "color-chart-1",
      "color-chart-2",
      "color-chart-3",
      "color-chart-4",
      "color-chart-5",
    ]
  }
  width={1000}
  xAxisField="x"
  xAxisFormatter={[Function]}
  xAxisTickCount={null}
  xAxisTitle={null}
  xAxisTitleColor="#000"
  yAxisFields={
    Array [
      "y",
    ]
  }
  yAxisIsStacked={false}
  yAxisMin={0}
  yAxisTickCount={null}
  yAxisTitle="Revenue"
  yAxisTitleColor="#000"
  yAxisTooltipFormatter={[Function]} />
`;

exports[`BarChart [common] example testing should match snapshot for 11.empty-with-custom-title-and-body 1`] = `
<BarChart
  data={Array []}
  hasLegend={false}
  hasToolTips={true}
  height={400}
  margin={
    Object {
      "bottom": 50,
      "left": 80,
      "right": 20,
      "top": 10,
    }
  }
  palette={
    Array [
      "color-chart-0",
      "color-chart-1",
      "color-chart-2",
      "color-chart-3",
      "color-chart-4",
      "color-chart-5",
    ]
  }
  width={1000}
  xAxisField="x"
  xAxisFormatter={[Function]}
  xAxisTickCount={null}
  xAxisTitle={null}
  xAxisTitleColor="#000"
  yAxisFields={
    Array [
      "y",
    ]
  }
  yAxisIsStacked={false}
  yAxisMin={0}
  yAxisTickCount={null}
  yAxisTitle="Revenue"
  yAxisTitleColor="#000"
  yAxisTooltipFormatter={[Function]}>
  <EmptyStateWrapper>
    <EmptyStateWrapper.Title>
      Something went wrong.
    </EmptyStateWrapper.Title>
    <EmptyStateWrapper.Body
      style={
        Object {
          "fontSize": "12px",
        }
      }>
      Echo park poutine esse tempor squid do. Lo-fi ramps XOXO chicharrones laboris, portland fugiat locavore. Fap four dollar toast keytar, cronut kogi fingerstache distillery microdosing everyday carry austin DIY dreamcatcher. Distillery flexitarian meditation laboris roof party. Cred raclette gastropub tilde PBR&B. Shoreditch poke adipisicing, reprehenderit lumbersexual succulents mustache officia franzen vinyl nostrud af. Hashtag bitters organic, before they sold out butcher cronut sapiente.
    </EmptyStateWrapper.Body>
  </EmptyStateWrapper>
</BarChart>
`;
